@@ -1,44 +1,3 @@
 export const mock_product_list = [
-{
-    img: "assets/Images/nike-new1.jpeg",
-    title: "Nike Air Zoom G.T. Jump",
-    genre:"Basketball Shoes",
-    numColors: "3 Colors",
-    price:"$180"
-},
-{
-    img: "assets/Images/nike-new2.jpeg",
-    title: "LeBron 19",
-    genre:"Basketball Shoes",
-    numColors: "3 Colors",
-    price:"$200"
-},
-{
-    img: "assets/Images/nike-new3.jpeg",
-    title: "LeBron 19",
-    genre:"Big Kids' Basketball Shoes",
-    numColors: "1 Color",
-    price:"$160"
-},
-{
-    img: "assets/Images/nike-new4.jpeg",
-    title: "Jordan Sport DNA",
-    genre:"Men's Jersey",
-    numColors: "2 Colors",
-    price:"$65"
-},
-{
-    img: "assets/Images/nike-new5.jpeg",
-    title: "Jordan Sport DNA",
-    genre:"Men's Mesh Shorts",
-    numColors: "2 Colors",
-    price:"$60"
-},
-{
-    img: "assets/Images/nike-new6.jpeg",
-    title: "PG 5",
-    genre:"Basketball Shoes",
-    numColors: "1 Color",
-    price:"$110"
-}
+
 ];
